examples/malgo/error/ErrorRigidType.mlg
module errorRigidType = {
  apply :: (a -> b) -> b -> a;
  apply = { f x -> f x };
}